--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,4 +22,4 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Release to S3
-      run: bash scripts/pipeline/release.sh ${{secrets.AWS_Bucket_Name}} "notebooks/smart_sales.zip" ${{secrets.AWS_Access_Key}} ${{secrets.AWS_Access_Secret}} "myapp.zip"
+      run: bash scripts/pipeline/release.sh ${{secrets.AWS_Bucket_Name}} "notebooks/smart_sales/smart_sales.zip" ${{secrets.AWS_Access_Key}} ${{secrets.AWS_Access_Secret}} "myapp.zip"
